zapata-agentforce/force-app/main/default/objects/Asset/fields/Cobertura_Citable__c.field-meta.xml
<CustomField>
    <fullName>Cobertura_Citable__c</fullName>
    <description>EL AGENTE SOLO PUEDE CITAR ESTE CAMPO, nunca Estado_Cobertura__c. Al ser formula no puede quedar desactualizado: si la evaluacion perdio vigencia degrada solo a REQUIERE_DATO y obliga a reevaluar. Asi es imposible regalar una garantia con datos viejos.</description>
    <label>Cobertura citable</label>
    <formula>IF( Evaluacion_Vigente__c, TEXT(Estado_Cobertura__c), "REQUIERE_DATO" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>