zapata-agentforce/force-app/main/default/objects/Asset/fields/Dato_Odometro_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Dato_Odometro_Vigente__c</fullName>
    <description>Verdadero si la lectura sigue siendo confiable. El umbral se edita en Parametros de garantia, no aqui. Si es falso, la evaluacion de cobertura devuelve REQUIERE_DATO.</description>
    <label>Dato de odometro vigente</label>
    <formula>AND( NOT(ISBLANK(Fecha_Odometro_Verificado__c)), NOT(ISBLANK(Ultimo_Odometro_Verificado__c)), (TODAY() - Fecha_Odometro_Verificado__c) &lt;= $Setup.Parametros_Garantia__c.Vigencia_Odometro_Dias__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>