zapata-agentforce/force-app/main/default/objects/Asset/fields/Estado_Cobertura__c.field-meta.xml
<CustomField>
    <fullName>Estado_Cobertura__c</fullName>
    <description>Ultima decision determinista de Evaluar_Cobertura_Garantia.</description>
    <label>Estado de cobertura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>CUBIERTO</fullName>
                </value>
                <value>
                    <fullName>NO_CUBIERTO</fullName>
                </value>
                <value>
                    <fullName>REQUIERE_DATO</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>