zapata-agentforce/force-app/main/default/objects/Asset/fields/Evaluacion_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Evaluacion_Vigente__c</fullName>
    <description>Verdadero solo si la ultima evaluacion se hizo DESPUES de la ultima lectura de odometro, con el dato aun vigente, y hace menos de 30 dias. Si es falso, el veredicto guardado ya no se puede citar.</description>
    <label>Evaluacion vigente</label>
    <formula>AND( NOT(ISBLANK(Fecha_Ultima_Evaluacion__c)), NOT(ISPICKVAL(Estado_Cobertura__c, "")), Dato_Odometro_Vigente__c, DATEVALUE(Fecha_Ultima_Evaluacion__c) &gt;= Fecha_Odometro_Verificado__c, (TODAY() - DATEVALUE(Fecha_Ultima_Evaluacion__c)) &lt;= $Setup.Parametros_Garantia__c.Vigencia_Evaluacion_Dias__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>