zapata-agentforce/force-app/main/default/objects/Asset/fields/Fecha_Contratacion_Extendida__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Contratacion_Extendida__c</fullName>
    <description>Debe caer dentro de los primeros 6 meses de vida de la unidad.</description>
    <label>Fecha de contratacion de la extendida</label>
    <type>Date</type>
</CustomField>