zapata-agentforce/force-app/main/default/objects/Asset/fields/Fecha_Odometro_Verificado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Odometro_Verificado__c</fullName>
    <description>Fuente de vigencia del dato de odometro.</description>
    <label>Fecha de odometro verificado</label>
    <type>Date</type>
</CustomField>