zapata-agentforce/force-app/main/default/objects/Asset/fields/Fecha_Ultima_Evaluacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultima_Evaluacion__c</fullName>
    <description>Auditoria de la ultima decision determinista.</description>
    <label>Fecha de ultima evaluacion</label>
    <type>DateTime</type>
</CustomField>