zapata-agentforce/force-app/main/default/objects/Asset/fields/Fecha_Verificacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Verificacion__c</fullName>
    <description>Momento en que se verifico la unidad en esta conversacion.</description>
    <label>Fecha de verificacion</label>
    <type>DateTime</type>
</CustomField>