zapata-agentforce/force-app/main/default/objects/Asset/fields/Garantia_Extendida__c.field-meta.xml
<CustomField>
    <fullName>Garantia_Extendida__c</fullName>
    <description>Plan opcional de tren motriz contratado en la compra o en los primeros 6 meses. Sin este dato el agente le niega cobertura a quien si la pago.</description>
    <label>Tiene garantia extendida</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>