zapata-agentforce/force-app/main/default/objects/Asset/fields/Garantia_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Garantia_Vigente__c</fullName>
    <description>Formula: la garantia basica cubre 24 meses o 250,000 km, lo que ocurra primero.</description>
    <formula>AND( NOT(ISBLANK(InstallDate)), InstallDate &gt; (TODAY() - 730), NOT(ISBLANK(Odometro__c)), Odometro__c &lt; 250000 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Garantia vigente</label>
    <type>Checkbox</type>
</CustomField>