zapata-agentforce/force-app/main/default/objects/Asset/fields/Metodo_Verificacion__c.field-meta.xml
<CustomField>
    <fullName>Metodo_Verificacion__c</fullName>
    <description>Briefing: el VIN esta en el parabrisas, la factura y el anuncio de venta, asi que no autentica. Registra que segundo factor se uso.</description>
    <label>Metodo de verificacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Ultimos 4 del telefono</fullName>
                </value>
                <value>
                    <fullName>Folio de OS previa</fullName>
                </value>
                <value>
                    <fullName>RFC</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>