zapata-agentforce/force-app/main/default/objects/Asset/fields/Odometro__c.field-meta.xml
<CustomField>
    <fullName>Odometro__c</fullName>
    <description>Lectura actual del odometro de la unidad en kilometros.</description>
    <label>Odometro (km)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>