zapata-agentforce/force-app/main/default/objects/Asset/fields/Placa__c.field-meta.xml
<CustomField>
    <fullName>Placa__c</fullName>
    <description>Placa de circulacion. El formulario de citas de Zapata la exige junto con el numero de serie. Sirve como segundo dato de identificacion cuando el VIN no se tiene a la mano.</description>
    <label>Placa</label>
    <length>15</length>
    <type>Text</type>
</CustomField>