zapata-agentforce/force-app/main/default/objects/Asset/fields/Proximo_Servicio_Km__c.field-meta.xml
<CustomField>
    <fullName>Proximo_Servicio_Km__c</fullName>
    <description>Formula: kilometraje en el que corresponde el siguiente servicio preventivo (cada 10,000 km).</description>
    <formula>IF(ISBLANK(Km_Ultimo_Servicio__c), 10000, Km_Ultimo_Servicio__c + 10000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proximo servicio (km)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>