zapata-agentforce/force-app/main/default/objects/Asset/fields/Servicios_Completos__c.field-meta.xml
<CustomField>
    <fullName>Servicios_Completos__c</fullName>
    <description>Condicion indispensable de la extendida: 100% de los servicios en taller autorizado y documentados. Un solo servicio omitido la cancela.</description>
    <label>Servicios preventivos completos</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>