zapata-agentforce/force-app/main/default/objects/Asset/fields/Tipo_Unidad__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Unidad__c</fullName>
    <description>Configuracion de la unidad.</description>
    <label>Tipo de unidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tractocamion</fullName>
                <default>true</default>
                <label>Tractocamion</label>
            </value>
            <value>
                <fullName>Camion rigido</fullName>
            </value>
            <value>
                <fullName>Volteo</fullName>
            </value>
            <value>
                <fullName>Pipa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>