zapata-agentforce/force-app/main/default/objects/Asset/fields/Ultimo_Odometro_Verificado__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_Odometro_Verificado__c</fullName>
    <description>Solo lo actualiza Registrar_Lectura_Odometro via Flow record-triggered.</description>
    <label>Ultimo odometro verificado</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>