zapata-agentforce/force-app/main/default/objects/Asset/fields/Unidad_Verificada__c.field-meta.xml
<CustomField>
    <fullName>Unidad_Verificada__c</fullName>
    <description>Gate duro. Las acciones de escritura permanecen ocultas hasta que sea true.</description>
    <label>Unidad verificada</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>